--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,45 @@
 *{
     display:block;
+    text-align: center;
+    margin:auto;
+    background-color: #49494d
 }
 
+body{
+    justify-content: center;
+}
+title{
+    font-size: 40px;
+    margin-top: 10%;
+    margin-bottom: 1%;
+}
 .end{
     display:none;
+}
+
+#answer-area li{
+    border:solid;
+    border-width: 2px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    justify-content: center;
+    width: fit-content;
+}
+
+#answer-area li:hover{
+    background-color: yellow;
+    cursor: pointer;
+}
+
+#highscore-area{
+    width: fit-content;
+    border: solid;
+    margin-top: 10px;
+}
+#quiz-area{
+    width: fit-content;
+    border: solid;
+}
+#timer{
+    font-size: 30px;
 }
